# termodoro

./: Cargo.toml  README.md
src/: app.rs  config.rs  error.rs  main.rs  message.rs  player.rs  stat.rs  timer.rs
src/args/: action.rs  app.rs  args_struct.rs  mod.rs
src/audio/: mod.rs  player.rs  source.rs
src/tui/: active.rs  mod.rs  overview.rs  screen.rs  selector.rs
src/tui/widgets/: asci_timer.rs  mod.rs
