[package]
name = "termodoro"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
crossterm = "0.29.0"
dirs = "6.0.0"
duration-str = "0.18.0"
pareg = "0.11.2"
raplay = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
termint = "0.6.1"
thiserror = "2.0.17"

[features]
default = ["default-sounds"]

default-sounds = []
